# SQ_Projekt

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  esp32_build.yml  python_test.yml  raspberry_build.yml  static-analysis.yml
MQTT_Broker_Pi/: CMakeLists.txt  README.md  mqtt_data_collector.c
NiceGui_PC/: NiceGui.py  requirements.txt
NiceGui_PC/services/: mqtt_service.py
NiceGui_PC/tests/: test_mqtt_service.py
NiceGui_PC/view/: NiceGuiView.py
Sensor_ESP32/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  shtc3_sensor.c
